<<<<<<< Updated upstream
[gd_scene load_steps=9 format=3 uid="uid://c8lnm3l62hfgj"]

[ext_resource type="Script" uid="uid://cr5c7hf3sbv11" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://bo218rijjy35x" path="res://Assets/animation.png" id="2_afpow"]
[ext_resource type="PackedScene" uid="uid://dbhf0bpgqhlux" path="res://Scenes/wander_controller.tscn" id="3_afpow"]
=======
[gd_scene load_steps=9 format=3 uid="uid://cak8dglk5h4y7"]

[ext_resource type="Script" uid="uid://bd2chsy8wlw7x" path="res://Scripts/enemy.gd" id="1_1f0kj"]
[ext_resource type="Texture2D" uid="uid://bo218rijjy35x" path="res://Assets/animation.png" id="2_afpow"]
[ext_resource type="PackedScene" uid="uid://bdtlkfpx3txk7" path="res://Scenes/wander_controller.tscn" id="3_afpow"]
>>>>>>> Stashed changes

[sub_resource type="AtlasTexture" id="AtlasTexture_287tu"]
atlas = ExtResource("2_afpow")
region = Rect2(0, 0, 229, 422)

[sub_resource type="AtlasTexture" id="AtlasTexture_0830c"]
atlas = ExtResource("2_afpow")
region = Rect2(229, 0, 229, 422)

[sub_resource type="SpriteFrames" id="SpriteFrames_ghaa6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_287tu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0830c")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1dp5w"]
radius = 502.0209

[sub_resource type="CircleShape2D" id="CircleShape2D_auwsv"]
radius = 83.38465

[node name="Enemy" type="CharacterBody2D"]
position = Vector2(0, -105)
motion_mode = 1
script = ExtResource("1_1f0kj")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_ghaa6")
autoplay = "default"
frame = 1
frame_progress = 0.8314161

[node name="DetectionArea" type="Area2D" parent="."]
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_1dp5w")

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_auwsv")

[node name="WanderController" parent="." instance=ExtResource("3_afpow")]
position = Vector2(0, 105)

[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
